fix api calls + linked with back

--- a/src/app/info-transaction/info-transaction.component.html
+++ b/src/app/info-transaction/info-transaction.component.html
@@ -6,16 +6,14 @@
           <th>Email de l'expéditeur</th>
           <th>Email du bénéficiaire</th>
           <th>Montant</th>
-          <th>Date</th>
           <th>Status</th>
         </tr>
       </thead>
       <tbody>
-        <tr *ngFor="let transaction of trs">
+        <tr *ngFor="let transaction of transactions">
           <td>{{ transaction.senderEmail }}</td>
-          <td>{{ transaction.beneficiaryEmail }}</td>
+          <td>{{ transaction.receiverEmail }}</td>
           <td>{{ transaction.amount }}</td>
-          <td>{{ transaction.date | date: 'short' }}</td>
           <td>{{ transaction.status }}</td>
         </tr>
       </tbody>
