--- a/src/app/add-balance/add-balance.component.html
+++ b/src/app/add-balance/add-balance.component.html
@@ -1,18 +1,12 @@
 <div class="div">
-    <div  >
-        <label>Type d'identité du client :</label>
-        <select name="clientIdentityType"  [(ngModel)]="clientIdentityType">
-            <option>CIN</option>
-            <option>Passport</option>
-        </select> 
-    </div>
+   
     <div >
         <label >Numéro d'identité :</label>
-        <input type="text"   name="identityNumber" [(ngModel)]="identityNumber">
+        <input type="text"   name="cin" [(ngModel)]="cin">
     </div>
     <div >
         <label >Montant de la balance :</label>
-        <input type="number"  name="balanceAmount" [(ngModel)]="balanceAmount">
+        <input type="number"  name="amount" [(ngModel)]="amount">
     </div>
 
     <div>
