home and add balance Changes

--- a/src/app/add-balance/add-balance.component.html
+++ b/src/app/add-balance/add-balance.component.html
@@ -1,3 +1,4 @@
+<h2>Ajouter balance</h2>
 <div class="div">
    
     <div >
@@ -13,5 +14,4 @@
         <button type="button" class="btn" (click)="onSubmit()">Ajouter Balance</button>
      </div>
 </div>
-
 
