--- a/src/app/add-balance/add-balance.component.css
+++ b/src/app/add-balance/add-balance.component.css
@@ -1,69 +1,64 @@
 body, html {
-  /* height: 50%; */
-  /* margin: 200; */
-  /* display: flex; */
-  /* justify-content: center;
-  align-items: center; */
-  background-color: #f7f7f7; /* Couleur de fond de la page */
+  background-color: #f7f7f7; 
 }
 
-/* form {
-  border: 1px solid #ccc;
-  padding: 20px;
-  background: white;
-  border-radius: 5px;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
-  width: 300px; /* Vous pouvez ajuster la largeur selon vos besoins */
-/* }  */
-
-button{
-  margin: 20px;
-  margin-left: 180px;
-  background-color: black;
-  color: white; 
-  border: none;
-}
-button:hover {
-  background-color: grey;
-  color: white; 
-}
-input{
-  width: 300px;
-  margin-left: 100px;
-  margin-top: 14px;
-  border: 1px solid #d1d1d1;
-  color: black;
+h2 {
+  text-align: center;
+  margin-top: 20px;
+  margin-bottom: 10px; 
+  font-weight: bold;
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 
-select{
-  width: 300px;
-  margin-left: 100px;
-  margin-top: 18px;
-  margin-bottom: 20px;
-  color: black; 
-  background-color: #ffffff; 
-  border: 1px solid #d1d1d1;
-}
-
-input:hover, select:hover {
-  border: 2px solid black; 
-  color: black; 
-  background-color: #ffffff; 
-}
-.div{
-  margin-top: 150px;
-  margin-left: 33%;
+.div {
+  margin-top: 50px;
+  margin-left: auto;
+  margin-right: auto;
   width: 500px;
   box-shadow: 5px 5px 10px 2px rgba(0,0,0,.8);
   background-color: rgb(244, 244, 244);
   border-radius: 20px;
-
+  padding: 20px;
 }
 
-label{
-padding-left: 100px;
-padding-top: 26px;
-font-size: 20px;
-font-weight: bold;
-font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+label {
+  display: block;
+  margin-bottom: 10px;
+  font-size: 20px;
+  font-weight: bold;
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+}
+
+input {
+  width: 100%;
+  margin-bottom: 10px;
+  padding: 8px;
+  border: 1px solid #d1d1d1;
+  color: black;
+}
+
+select {
+  width: 100%;
+  margin-bottom: 20px;
+  padding: 8px;
+  color: black;
+  background-color: #ffffff;
+  border: 1px solid #d1d1d1;
+}
+
+button {
+  width: 100%;
+  background-color: black;
+  color: white; 
+  border: none;
+  padding: 10px;
+  cursor: pointer;
+}
+
+button:hover {
+  background-color: grey;
+}
+
+input:hover, select:hover {
+  border: 2px solid black; 
 }
