--- a/src/app/add-client/add-client.component.html
+++ b/src/app/add-client/add-client.component.html
@@ -39,6 +39,11 @@
         <div class="col-12 mt-0 text-center">
           <button type="submit" class="btn btn-primary">Register</button>
         </div>
+
+        <div *ngIf="successMessage" class="mt-3 alert alert-success" role="alert">
+          {{ successMessage }}
+        </div>
+
       </form>
 
     </div>
