--- a/src/app/info-transaction/info-transaction.component.css
+++ b/src/app/info-transaction/info-transaction.component.css
@@ -71,6 +71,7 @@ th{
     padding-top: 20px;
     font-size: 16px;
     width: auto;
+    height: auto;
     font-weight: semi-bold;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
