--- a/src/app/list-client/list-client.component.html
+++ b/src/app/list-client/list-client.component.html
@@ -25,7 +25,7 @@
               <td>
                 <button
                   type="button"
-                  class="btn"
+                  class="btn w-auto"
                   [class.btn-danger]="client.blacklisted"
                   [class.btn-success]="!client.blacklisted"
                   (click)="toggleBlacklistStatus(client)"
